# fakturenn

./: .gitignore  CLAUDE.md  README.md  alembic.ini  pyproject.toml
app/api/: __init__.py  auth.py  dependencies.py  main.py
app/api/routers/: auth.py  automations.py  export_history.py  exports.py  health.py  jobs.py  mappings.py  sources.py  users.py
app/api/schemas/: automation.py  export.py  source.py  user.py
app/core/: date_utils.py  google_sheets.py  logging_config.py  paheko_helpers.py  path_template.py  runner.py  vault_client.py
app/db/: __init__.py  connection.py  models.py  schema.sql
app/export/: __init__.py  base.py  google_drive.py  local_storage.py  paheko.py  paheko_handler.py
app/nats/: __init__.py  client.py  messages.py
app/sources/: free.py  free_mobile.py  free_mobile_auth.py  gmail_manager.py  invoice.py  runner.py
app/workers/: __init__.py  export_worker.py  job_coordinator.py  job_worker.py  source_worker.py
deploy/: .env.example  Dockerfile.api  Dockerfile.worker  docker-compose.yml  init.sql
deploy/paheko/: config.local.php
migrations/: env.py
migrations/versions/: 001_initial_schema.py
scripts/: __init__.py  download_free_invoices.py  gmail_unread.py  run_fakturenn.py  run_job_worker.py  setup_free_mobile_auth.py
tests/: __init__.py  conftest.py  test_export_handlers.py  test_models.py  test_path_template.py
